--- a/web/index.html
+++ b/web/index.html
@@ -101,12 +101,21 @@
       }
     </script>
 
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+
+    <script src="main.dart.js" type="application/javascript"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-functions.js"></script>
+
     <script type="module">
       // Import the functions you need from the SDKs you need
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-functions.js";
+      // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+      // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
+      // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
+      // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-functions.js";
       // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-messaging.js";
 
       // import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-analytics.js";
